[package]
name = "rf-crypto"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1" }
x25519-dalek = { version = "2.0.0", features = [
    "reusable_secrets",
    "static_secrets",
] }

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
